--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <li><a href="#exponentielle-funktioner">Exponentielle funktioner</a></li>
 <li><a href="#potensfunktioner">Potensfunktioner</a></li>
 </ul></li>
+<li><a href="#tal">Tal</a></li>
 </ul>
 </div>
 <h1 id="funktioner"><a href="#TOC">Funktioner</a></h1>
@@ -28,7 +29,8 @@
 <p>Formel: \[y = ba^x\]</p>
 <h2 id="potensfunktioner"><a href="#TOC">Potensfunktioner</a></h2>
 <p>\[y = bx^a\]</p>
-<p>\[(1+rx)^a = (1+ry)\] # Tal</p>
+<p>\[(1+rx)^a = (1+ry)\]</p>
+<h1 id="tal"><a href="#TOC">Tal</a></h1>
 <p>N = Naturlige tal {1, 2, 3, …}</p>
 <p>N0 = Naturlige tal, samt 0 {0, 1, 2, 3, …}</p>
 <p>Z = Hele tal {…, -3, -2, -1, 0, 1, …}</p>
