Updated from source

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 </ul></li>
 <li><a href="#sammensatte-funktioner">Sammensatte funktioner</a></li>
 </ul></li>
+<li><a href="#tal">Tal</a></li>
 </ul>
 </div>
 <h1 id="differentialregning"><a href="#TOC">Differentialregning</a></h1>
@@ -144,7 +145,8 @@
 <p>Det kan ofte være nyttigt at kombinere flere funktioner, f.eks.:</p>
 <p>\[ f(x) = x^2 \] \[ g(x) = \sqrt x - 23 \]</p>
 <p>De kan herefter kombineres, f.eks.:</p>
-<p>\[ f(g(x)) = (\sqrt x - 23)^2 \] eller \[ g(f(x)) = \sqrt ( x^2 ) - 23 \] # Tal</p>
+<p>\[ f(g(x)) = (\sqrt x - 23)^2 \] eller \[ g(f(x)) = \sqrt ( x^2 ) - 23 \]</p>
+<h1 id="tal"><a href="#TOC">Tal</a></h1>
 <p>N = Naturlige tal {1, 2, 3, …}</p>
 <p>N0 = Naturlige tal, samt 0 {0, 1, 2, 3, …}</p>
 <p>Z = Hele tal {…, -3, -2, -1, 0, 1, …}</p>
