--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <div id="TOC">
 <ul>
+<li><a href="#introduktion">Introduktion</a></li>
 <li><a href="#differentialregning">Differentialregning</a><ul>
 <li><a href="#grænseværdi">Grænseværdi</a></li>
 <li><a href="#tiddistance">Tid/distance</a></li>
@@ -44,6 +45,8 @@
 <li><a href="#tal">Tal</a></li>
 </ul>
 </div>
+<h1 id="introduktion"><a href="#TOC">Introduktion</a></h1>
+<p>Dokumentet kan <a href="index.pdf">downloades</a> som pdf</p>
 <h1 id="differentialregning"><a href="#TOC">Differentialregning</a></h1>
 <h2 id="grænseværdi"><a href="#TOC">Grænseværdi</a></h2>
 <p>\[ {1 \over n} \to_{n \to \infty} 0 \]</p>
